--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <article class="w-full my-4 text-light-800 dark:text-dark-200">
+  <article class="w-full max-w-screen-md mx-auto my-4 text-light-800 dark:text-dark-200">
     <h1 class="mb-4 font-bold text-4xl text-light-900 dark:text-dark-100">{{ .Title }}</h1>
 
     {{ if .Content }}
