--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,13 +1,13 @@
 {{ define "main" }}
-  <div class="w-full flex flex-col">
+  <div class="flex flex-col max-w-screen-xl m-auto">
     <div class="text-center text-polar-night-2 dark:text-snow-storm-2">
       <h1 class="pt-6 text-4xl font-bold">{{ .Title }}</h1>
       <h2 class="pt-3 pb-12 text-xl">{{ .Summary }}</h2>
     </div>
     <div class="w-full sm:w-11/12 mx-auto bg-white dark:bg-polar-night-0 rounded-lg shadow-md">
-      <div class="single px-8 pt-8 max-w-screen-md mx-auto">
+      <article class="single px-8 pt-8 max-w-screen-md mx-auto">
         {{ .Content }}
-      </div>
+      </article>
       <hr class="my-8 border-snow-storm-1 dark:border-polar-night-3">
       <div class="px-8 pb-8 flex justify-between text-sm text-grey-light dark:text-grey-dark">
         <div class="flex align-middle">
