--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
   <div class="w-full max-w-screen-md mx-auto my-4">
-    <article class="single">
+    <div class="single">
       <h1>{{ .Title }}</h1>
       {{ .Content }}
-    </article>
+    </div>
   </div>
 {{ end }}
