--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="my-4 text-center">
-    <h1 class="font-bold text-5xl text-light-900 dark:text-dark-100">404</h1>
+  <div class="mx-auto my-4 text-center">
+    <h1 class="text-important text-6xl font-black">404</h1>
   </div>
 {{ end }}
