--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="w-full max-w-screen-md mx-auto my-4">
+  <div class="w-full max-w-screen-md mx-auto">
     <div class="single">
       <h1>{{ .Title }}</h1>
       {{ .Content }}
