--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="max-w-sm mx-auto my-4">
+  <div class="max-w-sm mx-auto">
     <svg id="index-icon" class="hidden overflow-visible" version="1.1" viewbox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <rect x=" 4" y=" 0" width="1" height="1" fill="#000000" />
       <rect x=" 5" y=" 0" width="1" height="1" fill="#000000" />
