fix mono font and improve links

--- a/assets/scss/_prism.scss
+++ b/assets/scss/_prism.scss
@@ -10,7 +10,7 @@ $code-light: mix($base-light, #ffffff);
   @apply leading-relaxed;
 
   font-size: 15px;
-  font-family: Mono, Consolas, Monaco, monospace;
+  font-family: 'JetBrains Mono', Consolas, Monaco, monospace;
 }
 
 code[class*="language-"],
