--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -35,7 +35,7 @@
             {{ end }}
           </span>
         </div>
-        <a class="flex align-middle" href="{{ path.Join .Site.Params.ContentUrl .File.Path }}" target="_blank">
+        <a class="flex align-middle" href="{{ .Site.Params.ContentUrl}}/{{ path.Join "" .File.Path }}" target="_blank">
           <svg class="my-auto mr-2 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7" />
             <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z" />
