mobile related improvements

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
   <body class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-base-light dark:bg-base-dark">
     {{ partial "header.html" . }}
 
-    <main class="w-full m-auto p-4">
+    <main class="w-full m-auto">
       {{ block "main" . }}
       {{ end }}
     </main>
