--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="mx-auto text-center">
+  <div class="mx-auto my-4 px-4 text-center">
     <h1 class="text-important text-6xl font-black">404</h1>
   </div>
 {{ end }}
