--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <div class="text-normal w-full max-w-screen-md mx-auto">
+  <div class="text-normal w-full max-w-screen-md mx-auto my-4 px-4">
     <h1 class="text-important mb-4 font-bold text-4xl">{{ .Title }}</h1>
     <div class="mt-4">
       {{ range .Data.Pages.GroupByDate "2006" }}
