--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="font-body antialiased" lang="{{ .Site.Language }}">
   <head>
-    {{ partial "head.html" . }}
+    {{ partial "head" . }}
   </head>
   <body class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-base-light dark:bg-base-dark">
     {{ partial "header.html" . }}
@@ -10,7 +10,5 @@
       {{ block "main" . }}
       {{ end }}
     </main>
-
-    {{ partial "javascript.html" . }}
   </body>
 </html>
