--- a/layouts/blank/baseof.html
+++ b/layouts/blank/baseof.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html class="font-body antialiased" lang="{{ .Site.Language }}">
   <head>
-    {{ partial "head.html" . }}
+    {{ partial "head" . }}
   </head>
   <body class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-base-light dark:bg-base-dark">
-    {{ partial "header.html" . }}
+    {{ partial "header" . }}
 
     {{ block "main" . }}
     {{ end }}
-
-    {{ partial "javascript.html" . }}
   </body>
 </html>
