--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,10 +3,10 @@
   <head>
     {{ partial "head" . }}
   </head>
-  <body x-data="{ isMenuVisible: false, isDarkTheme: isDarkTheme() }" class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-base-light dark:bg-base-dark">
+  <body x-data="{ menu: false, dark: isDarkTheme() }" class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-base-light dark:bg-base-dark">
     {{ partial "header" . }}
 
-    <div x-show="!isMenuVisible" class="w-full m-auto">
+    <div x-show="!menu" class="w-full m-auto">
       {{ block "main" . }}
       {{ end }}
     </div>
