--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="font-body antialiased" lang="{{ .Site.Language }}">
+<html x-data="{ menu: false, scroll: false, dark: isDarkTheme() }" class="font-body antialiased" lang="{{ .Site.Language }}">
   <head>
     {{ partial "head" . }}
   </head>
-  <body x-data="{ menu: false, dark: isDarkTheme() }" class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-base-light dark:bg-base-dark">
+  <body x-on:scroll.window="scroll = window.scrollY > 0" class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-base-light dark:bg-base-dark">
     {{ partial "header" . }}
 
     <div x-show="!menu" class="w-full m-auto">
