--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -78,9 +78,9 @@
         </div>
       </div>
     </div>
-    <div x-show="menu" style="display: none" class="block sm:hidden px-2">
+    <div x-show="menu" style="display: none" class="absolute top-16 z-10 px-2 w-screen h-screen sm:hidden bg-base-light dark:bg-base-dark overflow-y-auto">
       {{ range .Site.Menus.main }}
-        <a href="{{ .URL | absURL }}" class="block mt-6 px-3 py-2 text-lg text-center rounded-md hover:bg-snow-storm-1 dark-hover:bg-polar-night-1 transition-bg duration-100 ease-in">{{ .Name }}</a>
+        <a href="{{ .URL | absURL }}" class="block mt-6 last:mb-6 px-3 py-2 text-lg text-center rounded-md hover:bg-snow-storm-1 dark-hover:bg-polar-night-1 transition-bg duration-100 ease-in">{{ .Name }}</a>
       {{ end }}
     </div>
   </nav>
