fix color transition flashing

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html x-data="{ menu: false, scroll: false, dark: isDarkTheme() }" class="font-body antialiased" lang="{{ .Site.Language }}">
+<html x-data="{ menu: false, scroll: false, transition: true, dark: isDarkTheme() }" class="font-body antialiased" lang="{{ .Site.Language }}">
   <head>
     {{ partial "head" . }}
   </head>
