rename main to theme, remove python from prism

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,6 +11,6 @@
       {{ end }}
     </div>
 
-    {{ partial "javascript" (dict "context" . "paths" (slice "js/vendor/alpine.js" "js/main.js") "name" "js/main.js") }}
+    {{ partial "javascript" (dict "context" . "paths" (slice "js/vendor/alpine.js" "js/theme.js") "name" "js/main.js") }}
   </body>
 </html>
