index page and baseof

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
-<header id="header" :class="{ 'header-shadow': scroll && !menu, 'transition-shadow duration-200 ease-linear': transition }" class="w-full sticky top-0 z-10 select-none">
-  <nav class="text-normal bg-base-light dark:bg-base-dark">
-    <div class="max-w-screen-xl mx-auto px-4">
+<header id="header" class="w-full sticky top-0 z-10 select-none">
+  <nav class="text-normal bg-dark-300">
+    <div class="max-w-screen-lg mx-auto px-4">
       <div class="relative flex items-center justify-between h-16">
         <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex-shrink-0">
