--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html x-data="{ menu: false, scroll: false, transition: true, dark: isDarkTheme() }" class="font-body antialiased" lang="{{ .Site.Language }}">
+<html class="font-body" lang="{{ .Site.Language }}">
   <head>
     {{ partial "head" . }}
   </head>
-  <body x-on:scroll.window="scroll = window.scrollY > 0" :class="{ 'overflow-y-hidden': menu }" class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-base-light dark:bg-base-dark">
+  <body class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-dark-500">
     {{ partial "header" . }}
 
     <div class="w-full m-auto">
