--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,204 +1,20 @@
 {{ define "main" }}
-  <div class="max-w-sm mx-auto my-4 px-4">
-    <svg id="index-icon" class="hidden overflow-visible" version="1.1" viewbox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" shape-rendering="crispEdges">
-      <rect x=" 4" y=" 0" width="1" height="1" fill="#000000" />
-      <rect x=" 5" y=" 0" width="1" height="1" fill="#000000" />
-      <rect x="11" y=" 0" width="1" height="1" fill="#000000" />
-      <rect x="12" y=" 0" width="1" height="1" fill="#000000" />
-      <rect x=" 3" y=" 1" width="1" height="1" fill="#000000" />
-      <rect x=" 4" y=" 1" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 5" y=" 1" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 6" y=" 1" width="1" height="1" fill="#000000" />
-      <rect x="10" y=" 1" width="1" height="1" fill="#000000" />
-      <rect x="11" y=" 1" width="1" height="1" fill="#88C0D0" />
-      <rect x="12" y=" 1" width="1" height="1" fill="#88C0D0" />
-      <rect x="13" y=" 1" width="1" height="1" fill="#000000" />
-      <rect x=" 2" y=" 2" width="1" height="1" fill="#000000" />
-      <rect x=" 3" y=" 2" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 4" y=" 2" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 5" y=" 2" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 6" y=" 2" width="1" height="1" fill="#000000" />
-      <rect x=" 9" y=" 2" width="1" height="1" fill="#000000" />
-      <rect x="10" y=" 2" width="1" height="1" fill="#88C0D0" />
-      <rect x="11" y=" 2" width="1" height="1" fill="#88C0D0" />
-      <rect x="12" y=" 2" width="1" height="1" fill="#88C0D0" />
-      <rect x="13" y=" 2" width="1" height="1" fill="#000000" />
-      <rect x=" 2" y=" 3" width="1" height="1" fill="#000000" />
-      <rect x=" 3" y=" 3" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 4" y=" 3" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 5" y=" 3" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 6" y=" 3" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 7" y=" 3" width="1" height="1" fill="#000000" />
-      <rect x=" 9" y=" 3" width="1" height="1" fill="#000000" />
-      <rect x="10" y=" 3" width="1" height="1" fill="#88C0D0" />
-      <rect x="11" y=" 3" width="1" height="1" fill="#92C5D4" />
-      <rect x="12" y=" 3" width="1" height="1" fill="#88C0D0" />
-      <rect x="13" y=" 3" width="1" height="1" fill="#88C0D0" />
-      <rect x="14" y=" 3" width="1" height="1" fill="#000000" />
-      <rect x=" 1" y=" 4" width="1" height="1" fill="#000000" />
-      <rect x=" 2" y=" 4" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 3" y=" 4" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 4" y=" 4" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 5" y=" 4" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 6" y=" 4" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 7" y=" 4" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 8" y=" 4" width="1" height="1" fill="#000000" />
-      <rect x=" 9" y=" 4" width="1" height="1" fill="#88C0D0" />
-      <rect x="10" y=" 4" width="1" height="1" fill="#88C0D0" />
-      <rect x="11" y=" 4" width="1" height="1" fill="#92C5D4" />
-      <rect x="12" y=" 4" width="1" height="1" fill="#92C5D4" />
-      <rect x="13" y=" 4" width="1" height="1" fill="#88C0D0" />
-      <rect x="14" y=" 4" width="1" height="1" fill="#000000" />
-      <rect x=" 1" y=" 5" width="1" height="1" fill="#000000" />
-      <rect x=" 2" y=" 5" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 3" y=" 5" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 4" y=" 5" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 5" y=" 5" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 6" y=" 5" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 7" y=" 5" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 8" y=" 5" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 9" y=" 5" width="1" height="1" fill="#000000" />
-      <rect x="10" y=" 5" width="1" height="1" fill="#000000" />
-      <rect x="11" y=" 5" width="1" height="1" fill="#92C5D4" />
-      <rect x="12" y=" 5" width="1" height="1" fill="#92C5D4" />
-      <rect x="13" y=" 5" width="1" height="1" fill="#88C0D0" />
-      <rect x="14" y=" 5" width="1" height="1" fill="#000000" />
-      <rect x=" 0" y=" 6" width="1" height="1" fill="#000000" />
-      <rect x=" 1" y=" 6" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 2" y=" 6" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 3" y=" 6" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 4" y=" 6" width="1" height="1" fill="#7996B9" />
-      <rect x=" 5" y=" 6" width="1" height="1" fill="#7996B9" />
-      <rect x=" 6" y=" 6" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 7" y=" 6" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 8" y=" 6" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 9" y=" 6" width="1" height="1" fill="#5E81AC" />
-      <rect x="10" y=" 6" width="1" height="1" fill="#5E81AC" />
-      <rect x="11" y=" 6" width="1" height="1" fill="#000000" />
-      <rect x="12" y=" 6" width="1" height="1" fill="#000000" />
-      <rect x="13" y=" 6" width="1" height="1" fill="#88C0D0" />
-      <rect x="14" y=" 6" width="1" height="1" fill="#88C0D0" />
-      <rect x="15" y=" 6" width="1" height="1" fill="#000000" />
-      <rect x=" 0" y=" 7" width="1" height="1" fill="#000000" />
-      <rect x=" 1" y=" 7" width="1" height="1" fill="#000000" />
-      <rect x=" 2" y=" 7" width="1" height="1" fill="#5E81AC" />
-      <rect x=" 3" y=" 7" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 4" y=" 7" width="1" height="1" fill="#7996B9" />
-      <rect x=" 5" y=" 7" width="1" height="1" fill="#7996B9" />
-      <rect x=" 6" y=" 7" width="1" height="1" fill="#7996B9" />
-      <rect x=" 7" y=" 7" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 8" y=" 7" width="1" height="1" fill="#6B8BB3" />
-      <rect x=" 9" y=" 7" width="1" height="1" fill="#6B8BB3" />
-      <rect x="10" y=" 7" width="1" height="1" fill="#5E81AC" />
-      <rect x="11" y=" 7" width="1" height="1" fill="#5E81AC" />
-      <rect x="12" y=" 7" width="1" height="1" fill="#5E81AC" />
-      <rect x="13" y=" 7" width="1" height="1" fill="#000000" />
-      <rect x="14" y=" 7" width="1" height="1" fill="#000000" />
-      <rect x="15" y=" 7" width="1" height="1" fill="#000000" />
-      <rect x=" 0" y=" 8" width="1" height="1" fill="#000000" />
-      <rect x=" 1" y=" 8" width="1" height="1" fill="#2E3440" />
-      <rect x=" 2" y=" 8" width="1" height="1" fill="#000000" />
-      <rect x=" 3" y=" 8" width="1" height="1" fill="#000000" />
-      <rect x=" 4" y=" 8" width="1" height="1" fill="#7996B9" />
-      <rect x=" 5" y=" 8" width="1" height="1" fill="#86A0C0" />
-      <rect x=" 6" y=" 8" width="1" height="1" fill="#7996B9" />
-      <rect x=" 7" y=" 8" width="1" height="1" fill="#7996B9" />
-      <rect x=" 8" y=" 8" width="1" height="1" fill="#000000" />
-      <rect x=" 9" y=" 8" width="1" height="1" fill="#000000" />
-      <rect x="10" y=" 8" width="1" height="1" fill="#6B8BB3" />
-      <rect x="11" y=" 8" width="1" height="1" fill="#6B8BB3" />
-      <rect x="12" y=" 8" width="1" height="1" fill="#5E81AC" />
-      <rect x="13" y=" 8" width="1" height="1" fill="#000000" />
-      <rect x="14" y=" 8" width="1" height="1" fill="#3B4252" />
-      <rect x="15" y=" 8" width="1" height="1" fill="#000000" />
-      <rect x=" 0" y=" 9" width="1" height="1" fill="#000000" />
-      <rect x=" 1" y=" 9" width="1" height="1" fill="#2E3440" />
-      <rect x=" 2" y=" 9" width="1" height="1" fill="#2E3440" />
-      <rect x=" 3" y=" 9" width="1" height="1" fill="#2E3440" />
-      <rect x=" 4" y=" 9" width="1" height="1" fill="#000000" />
-      <rect x=" 5" y=" 9" width="1" height="1" fill="#86A0C0" />
-      <rect x=" 6" y=" 9" width="1" height="1" fill="#000000" />
-      <rect x=" 7" y=" 9" width="1" height="1" fill="#000000" />
-      <rect x=" 8" y=" 9" width="1" height="1" fill="#353B49" />
-      <rect x=" 9" y=" 9" width="1" height="1" fill="#353B49" />
-      <rect x="10" y=" 9" width="1" height="1" fill="#000000" />
-      <rect x="11" y=" 9" width="1" height="1" fill="#6B8BB3" />
-      <rect x="12" y=" 9" width="1" height="1" fill="#000000" />
-      <rect x="13" y=" 9" width="1" height="1" fill="#3B4252" />
-      <rect x="14" y=" 9" width="1" height="1" fill="#3B4252" />
-      <rect x="15" y=" 9" width="1" height="1" fill="#000000" />
-      <rect x=" 0" y="10" width="1" height="1" fill="#000000" />
-      <rect x=" 1" y="10" width="1" height="1" fill="#2E3440" />
-      <rect x=" 2" y="10" width="1" height="1" fill="#2E3440" />
-      <rect x=" 3" y="10" width="1" height="1" fill="#2E3440" />
-      <rect x=" 4" y="10" width="1" height="1" fill="#2E3440" />
-      <rect x=" 5" y="10" width="1" height="1" fill="#000000" />
-      <rect x=" 6" y="10" width="1" height="1" fill="#313845" />
-      <rect x=" 7" y="10" width="1" height="1" fill="#313845" />
-      <rect x=" 8" y="10" width="1" height="1" fill="#353B49" />
-      <rect x=" 9" y="10" width="1" height="1" fill="#353B49" />
-      <rect x="10" y="10" width="1" height="1" fill="#353B49" />
-      <rect x="11" y="10" width="1" height="1" fill="#000000" />
-      <rect x="12" y="10" width="1" height="1" fill="#383F4E" />
-      <rect x="13" y="10" width="1" height="1" fill="#3B4252" />
-      <rect x="14" y="10" width="1" height="1" fill="#3B4252" />
-      <rect x="15" y="10" width="1" height="1" fill="#000000" />
-      <rect x=" 1" y="11" width="1" height="1" fill="#000000" />
-      <rect x=" 2" y="11" width="1" height="1" fill="#2E3440" />
-      <rect x=" 3" y="11" width="1" height="1" fill="#2E3440" />
-      <rect x=" 4" y="11" width="1" height="1" fill="#2E3440" />
-      <rect x=" 5" y="11" width="1" height="1" fill="#313845" />
-      <rect x=" 6" y="11" width="1" height="1" fill="#313845" />
-      <rect x=" 7" y="11" width="1" height="1" fill="#313845" />
-      <rect x=" 8" y="11" width="1" height="1" fill="#353B49" />
-      <rect x=" 9" y="11" width="1" height="1" fill="#353B49" />
-      <rect x="10" y="11" width="1" height="1" fill="#353B49" />
-      <rect x="11" y="11" width="1" height="1" fill="#383F4E" />
-      <rect x="12" y="11" width="1" height="1" fill="#383F4E" />
-      <rect x="13" y="11" width="1" height="1" fill="#383F4E" />
-      <rect x="14" y="11" width="1" height="1" fill="#000000" />
-      <rect x=" 1" y="12" width="1" height="1" fill="#000000" />
-      <rect x=" 2" y="12" width="1" height="1" fill="#2E3440" />
-      <rect x=" 3" y="12" width="1" height="1" fill="#2E3440" />
-      <rect x=" 4" y="12" width="1" height="1" fill="#2E3440" />
-      <rect x=" 5" y="12" width="1" height="1" fill="#313845" />
-      <rect x=" 6" y="12" width="1" height="1" fill="#313845" />
-      <rect x=" 7" y="12" width="1" height="1" fill="#313845" />
-      <rect x=" 8" y="12" width="1" height="1" fill="#313845" />
-      <rect x=" 9" y="12" width="1" height="1" fill="#353B49" />
-      <rect x="10" y="12" width="1" height="1" fill="#353B49" />
-      <rect x="11" y="12" width="1" height="1" fill="#383F4E" />
-      <rect x="12" y="12" width="1" height="1" fill="#383F4E" />
-      <rect x="13" y="12" width="1" height="1" fill="#383F4E" />
-      <rect x="14" y="12" width="1" height="1" fill="#000000" />
-      <rect x=" 2" y="13" width="1" height="1" fill="#000000" />
-      <rect x=" 3" y="13" width="1" height="1" fill="#000000" />
-      <rect x=" 4" y="13" width="1" height="1" fill="#2E3440" />
-      <rect x=" 5" y="13" width="1" height="1" fill="#2E3440" />
-      <rect x=" 6" y="13" width="1" height="1" fill="#313845" />
-      <rect x=" 7" y="13" width="1" height="1" fill="#313845" />
-      <rect x=" 8" y="13" width="1" height="1" fill="#313845" />
-      <rect x=" 9" y="13" width="1" height="1" fill="#353B49" />
-      <rect x="10" y="13" width="1" height="1" fill="#353B49" />
-      <rect x="11" y="13" width="1" height="1" fill="#353B49" />
-      <rect x="12" y="13" width="1" height="1" fill="#000000" />
-      <rect x="13" y="13" width="1" height="1" fill="#000000" />
-      <rect x=" 4" y="14" width="1" height="1" fill="#000000" />
-      <rect x=" 5" y="14" width="1" height="1" fill="#000000" />
-      <rect x=" 6" y="14" width="1" height="1" fill="#313845" />
-      <rect x=" 7" y="14" width="1" height="1" fill="#313845" />
-      <rect x=" 8" y="14" width="1" height="1" fill="#313845" />
-      <rect x=" 9" y="14" width="1" height="1" fill="#313845" />
-      <rect x="10" y="14" width="1" height="1" fill="#000000" />
-      <rect x="11" y="14" width="1" height="1" fill="#000000" />
-      <rect x=" 6" y="15" width="1" height="1" fill="#000000" />
-      <rect x=" 7" y="15" width="1" height="1" fill="#000000" />
-      <rect x=" 8" y="15" width="1" height="1" fill="#000000" />
-      <rect x=" 9" y="15" width="1" height="1" fill="#000000" />
-    </svg>
+  <div class="flex flex-col my-4 text-white text-6xl font-black">
+    <div class="text-center">Just another <div class="testing">dark</div> corner<br>of the internet</div>
+    <div class="flex justify-center overflow-hidden">
+      <div class="glitch" data-text="&ensp;&ensp;°">&ensp;&ensp;°</div>
+    </div>
+    <div class="flex justify-center overflow-hidden">
+      <div class="glitch" data-text="°">°</div>
+    </div>
+    <div class="flex justify-center overflow-hidden">
+      <div class="glitch" data-text="&ensp;&ensp;°">&ensp;&ensp;°</div>
+    </div>
+    <div class="flex justify-center overflow-hidden">
+      <div class="glitch" data-text="°">°</div>
+    </div>
+    <div class="flex justify-center overflow-hidden">
+      <div class="glitch" data-text="<ₒ))><"><ₒ))><</div>
+    </div>
   </div>
-  {{ $script := slice (resources.Get "js/vendor/gsap.min.js") }}
-  {{ $script := $script | append (resources.Get "js/index.js") }}
-  {{ $script := $script | resources.Concat "js/index.js" | resources.Minify }}
-  <script type="text/javascript" src="{{ $script.RelPermalink }}"></script>
 {{ end }}
