--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,20 +1,20 @@
 {{ define "main" }}
-  <div class="flex flex-col my-4 text-white text-6xl font-black">
-    <div class="text-center">Just another <div class="testing">dark</div> corner<br>of the internet</div>
+  <div class="flex flex-col my-4 text-white text-5xl font-black">
+    <div class="text-center">Another <span class="underline text-decoration-blue-500">dark</span> corner<br>of the internet</div>
     <div class="flex justify-center overflow-hidden">
-      <div class="glitch" data-text="&ensp;&ensp;°">&ensp;&ensp;°</div>
+      <div class="glitch-3" data-text="&ensp;&ensp;°">&ensp;&ensp;°</div>
     </div>
     <div class="flex justify-center overflow-hidden">
-      <div class="glitch" data-text="°">°</div>
+      <div class="glitch-3" data-text="°">°</div>
     </div>
     <div class="flex justify-center overflow-hidden">
-      <div class="glitch" data-text="&ensp;&ensp;°">&ensp;&ensp;°</div>
+      <div class="glitch-3" data-text="&ensp;&ensp;°">&ensp;&ensp;°</div>
     </div>
     <div class="flex justify-center overflow-hidden">
-      <div class="glitch" data-text="°">°</div>
+      <div class="glitch-3" data-text="°">°</div>
     </div>
     <div class="flex justify-center overflow-hidden">
-      <div class="glitch" data-text="<ₒ))><"><ₒ))><</div>
+      <div class="glitch-3" data-text="<ₒ))><"><ₒ))><</div>
     </div>
   </div>
 {{ end }}
