--- a/assets/scss/_glitch.scss
+++ b/assets/scss/_glitch.scss
@@ -1,49 +1,46 @@
 @import "colors";
 
-.glitch {
-  @apply relative;
+@for $i from 1 through 3 {
+  @variants hover {
+    .glitch-#{$i} {
+      @apply relative;
 
-  &:before, &:after {
-    @apply absolute;
-    @apply w-full;
-    @apply top-0;
-    @apply bg-dark-500;
-    @apply overflow-hidden;
+      &:before, &:after {
+        @apply absolute;
+        @apply w-full;
+        @apply top-0;
+        @apply bg-dark-500;
+        @apply overflow-hidden;
 
-    content: attr(data-text);
-    left: 3px;
-    animation-duration: 3s;
-    animation-timing-function: linear;
-    animation-delay: 0s;
-    animation-iteration-count: infinite;
-    animation-direction: reverse-alternate;
-  }
+        content: attr(data-text);
+        left: $i+px;
+        animation-duration: 3s;
+        animation-timing-function: linear;
+        animation-delay: 0s;
+        animation-iteration-count: infinite;
+        animation-direction: reverse-alternate;
+      }
 
-  &:before {
-    @keyframes glitch-animation-1 {
-      $steps: 20;
-      @for $i from 0 through $steps {
-        #{percentage($i * (1 / $steps))} {
-          clip: rect(random(150)+px, 9999px, random(150)+px, 0);
+      @for $j from 1 through 2 {
+        @keyframes glitch-animation-#{$j} {
+          $steps: 20;
+          @for $k from 0 through $steps {
+            #{percentage($k * (1 / $steps))} {
+              clip: rect(random($i * 50)+px, 9999px, random($i * 50)+px, 0);
+            }
+          }
         }
       }
-    }
 
-    text-shadow: -3px 0 $red-hs-500;
-    animation-name: glitch-animation-1;
-  }
+      &:before {
+        text-shadow: -$i+px 0 $red-hs-500;
+        animation-name: glitch-animation-1;
+      }
 
-  &:after {
-    @keyframes glitch-animation-2 {
-      $steps: 20;
-      @for $i from 0 through $steps {
-        #{percentage($i * (1 / $steps))} {
-          clip: rect(random(150)+px, 9999px, random(150)+px, 0);
-        }
+      &:after {
+        text-shadow: -$i+px 0 $blue-hs-500;
+        animation-name: glitch-animation-2;
       }
     }
-
-    text-shadow: -3px 0 $blue-hs-500;
-    animation-name: glitch-animation-2;
   }
 }
