--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,51 +1,32 @@
 <header id="header" class="w-full sticky top-0 z-10 select-none">
-  <nav class="text-normal bg-dark-300">
-    <div class="max-w-screen-lg mx-auto px-4">
+  <nav class="text-white text-xl font-bold bg-dark-300">
+    <div class="max-w-screen-md mx-auto px-4">
       <div class="relative flex items-center justify-between h-16">
         <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
           <div class="flex-shrink-0">
             <a href="{{ .Site.BaseURL }}">
               <svg class="block h-8 px-2 w-auto" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 -0.5 16 16" shape-rendering="crispEdges">
                 <path stroke="#000000" d="M4 0h2M11 0h2M3 1h1M6 1h1M10 1h1M13 1h1M2 2h1M6 2h1M9 2h1M13 2h1M2 3h1M7 3h1M9 3h1M14 3h1M1 4h1M8 4h1M14 4h1M1 5h1M9 5h2M14 5h1M0 6h1M11 6h2M15 6h1M0 7h2M13 7h3M0 8h1M2 8h2M8 8h2M13 8h1M15 8h1M0 9h1M4 9h1M6 9h2M10 9h1M12 9h1M15 9h1M0 10h1M5 10h1M11 10h1M15 10h1M1 11h1M14 11h1M1 12h1M14 12h1M2 13h2M12 13h2M4 14h2M10 14h2M6 15h4" />
-                <path stroke="#5E81AC" d="M4 1h2M3 2h3M3 3h1M5 3h2M2 4h2M6 4h2M2 5h1M7 5h2M1 6h2M8 6h3M2 7h1M10 7h3M12 8h1" />
-                <path stroke="#88C0D0" d="M11 1h2M10 2h3M10 3h1M12 3h2M9 4h2M13 4h1M13 5h1M13 6h2" />
-                <path stroke="#6B8BB3" d="M4 3h1M4 4h2M3 5h4M3 6h1M6 6h2M3 7h1M7 7h3M10 8h2M11 9h1" />
-                <path stroke="#92C5D4" d="M11 3h1M11 4h2M11 5h2" />
-                <path stroke="#7996B9" d="M4 6h2M4 7h3M4 8h1M6 8h2" />
-                <path stroke="#2E3440" d="M1 8h1M1 9h3M1 10h4M2 11h3M2 12h3M4 13h2" />
-                <path stroke="#86A0C0" d="M5 8h1M5 9h1" />
-                <path stroke="#3B4252" d="M14 8h1M13 9h2M13 10h2" />
-                <path stroke="#353B49" d="M8 9h2M8 10h3M8 11h3M9 12h2M9 13h3" />
-                <path stroke="#313845" d="M6 10h2M5 11h3M5 12h4M6 13h3M6 14h4" />
-                <path stroke="#383F4E" d="M12 10h1M11 11h3M11 12h3" />
+                <path stroke="#00E5DD" d="M4 1h2M3 2h3M3 3h1M5 3h2M2 4h2M6 4h2M2 5h1M7 5h2M1 6h2M8 6h3M2 7h1M10 7h3M12 8h1" />
+                <path stroke="#00F2E9" d="M11 1h2M10 2h3M10 3h1M12 3h2M9 4h2M13 4h1M13 5h1M4 6h2M13 6h2M4 7h3M4 8h1M6 8h2" />
+                <path stroke="#00EBE3" d="M4 3h1M4 4h2M3 5h4M3 6h1M6 6h2M3 7h1M7 7h3M10 8h2M11 9h1" />
+                <path stroke="#00F9EF" d="M11 3h1M11 4h2M11 5h2M5 8h1M5 9h1" />
+                <path stroke="#14161A" d="M1 8h1M1 9h3M1 10h4M2 11h3M2 12h3M4 13h2" />
+                <path stroke="#282C34" d="M14 8h1M13 9h2M13 10h2" />
+                <path stroke="#1E2127" d="M8 9h2M8 10h3M8 11h3M9 12h2M9 13h3" />
+                <path stroke="#191C21" d="M6 10h2M5 11h3M5 12h4M6 13h3M6 14h4" />
+                <path stroke="#23272E" d="M12 10h1M11 11h3M11 12h3" />
               </svg>
+
             </a>
           </div>
         </div>
         <div class="items-center hidden sm:flex">
-          <div class="flex items-center">
-            {{ range .Site.Menus.main }}
-              <a href="{{ .URL | absURL }}" class="mx-2 first:ml-0 last:mr-0 px-2 py-1 text-lg rounded-md hover:bg-snow-storm-1 dark-hover:bg-polar-night-1 transition-bg duration-100 ease-in-out">{{ .Name }}</a>
-            {{ end }}
-          </div>
-          <div class="ml-4">
-            <button @click="dark = toggleTheme(); transition = false; $nextTick(() => transition = true)" :class="{ 'transition-bg duration-100 ease-in-out': transition }" class="inline-flex p-2 items-center justify-center rounded-md hover:bg-snow-storm-1 dark-hover:bg-polar-night-1 focus:outline-none">
-              <svg xmlns="http://www.w3.org/2000/svg" x-show="!dark" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
-              </svg>
-              <svg xmlns="http://www.w3.org/2000/svg" x-show="dark" style="display: none" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <circle cx="12" cy="12" r="5" />
-                <line x1="12" y1="1" x2="12" y2="3" />
-                <line x1="12" y1="21" x2="12" y2="23" />
-                <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
-                <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
-                <line x1="1" y1="12" x2="3" y2="12" />
-                <line x1="21" y1="12" x2="23" y2="12" />
-                <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
-                <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
-              </svg>
-            </button>
-          </div>
+          {{ range .Site.Menus.main }}
+            <a class="mx-2 first:ml-0 last:mr-0 px-2 py-1" href="{{ .URL | absURL }}">
+              <div class="hover:glitch-2" data-text="{{ .Name }}">{{ .Name }}</div>
+            </a>
+          {{ end }}
         </div>
         <div class="absolute inset-y-0 right-0 flex items-center sm:hidden">
           <button @click="dark = toggleTheme(); transition = false; $nextTick(() => transition = true)" :class="{ 'transition-bg duration-100 ease-in-out': transition }" class="inline-flex items-center justify-center p-2 rounded-md hover:bg-snow-storm-1 dark-hover:bg-polar-night-1 focus:outline-none">
