--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
-<header id="header" class="w-full sticky top-0 z-10 select-none">
-  <nav class="text-white text-xl font-bold bg-dark-300">
+<header id="header" class="w-full top-0 z-10 select-none">
+  <nav class="text-white text-lg font-medium bg-dark-800">
     <div class="max-w-screen-md mx-auto px-4">
       <div class="relative flex items-center justify-between h-16">
         <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
