--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,49 +1,29 @@
-$blue-hs-100: #E6FEFD;
-$blue-hs-200: #BFFEFB;
-$blue-hs-300: #99FDF9;
-$blue-hs-400: #4DFBF4;
-$blue-hs-500: #00F9EF;
-$blue-hs-600: #00E0D7;
-$blue-hs-700: #00958F;
-$blue-hs-800: #00706C;
-$blue-hs-900: #004B48;
+$red-100: #FF004E;
+$red-200: #EF0049;
+$red-300: #DF0044;
+$red-400: #CF003F;
+$red-500: #BF003A;
+$red-600: #AF0035;
+$red-700: #9F0030;
+$red-800: #8F002B;
+$red-900: #7F0026;
 
-$red-hs-100: #FFE6ED;
-$red-hs-200: #FFBFD3;
-$red-hs-300: #FF99B8;
-$red-hs-400: #FF4D83;
-$red-hs-500: #FF004E;
-$red-hs-600: #E60046;
-$red-hs-700: #99002F;
-$red-hs-800: #730023;
-$red-hs-900: #4D0017;
+$blue-100: #00F9EF;
+$blue-200: #00E9E0;
+$blue-300: #00DAD1;
+$blue-400: #00CAC2;
+$blue-500: #00BBB3;
+$blue-600: #00ABA4;
+$blue-700: #009B95;
+$blue-800: #008C86;
+$blue-900: #007C77;
 
-$blue-100: #EAFAFA;
-$blue-200: #CAF3F1;
-$blue-300: #AAEBE9;
-$blue-400: #6ADDD9;
-$blue-500: #2ACEC8;
-$blue-600: #26B9B4;
-$blue-700: #197C78;
-$blue-800: #135D5A;
-$blue-900: #0D3E3C;
-
-$red-100: #FBEAEF;
-$red-200: #F4CAD7;
-$red-300: #EDAABF;
-$red-400: #E06B8E;
-$red-500: #D32B5E;
-$red-600: #BE2755;
-$red-700: #7F1A38;
-$red-800: #5F132A;
-$red-900: #3F0D1C;
-
-$dark-100: #282C34;
-$dark-200: #23272E;
-$dark-300: #1E2127;
-$dark-400: #191C21;
-$dark-500: #14161A;
-$dark-600: #0F1114;
-$dark-700: #0A0B0D;
-$dark-800: #050607;
-$dark-900: #000000;
+$dark-100: #414768;
+$dark-200: #3C415F;
+$dark-300: #363B57;
+$dark-400: #31354E;
+$dark-500: #2C3046;
+$dark-600: #262A3D;
+$dark-700: #212434;
+$dark-800: #1B1E2C;
+$dark-900: #161823;
