--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,8 @@
   <head>
     {{ partial "head" . }}
   </head>
-  <body class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-dark-500">
+  <body class="flex flex-col min-w-screen min-h-screen m-0 p-0 bg-dark-900">
+    <canvas class="z-60" width="504" height="144" style="width: 504px; height: 144px; left: 587px; position: fixed"></canvas>
     {{ partial "header" . }}
 
     <div class="w-full m-auto">
