--- a/assets/scss/_utilities.scss
+++ b/assets/scss/_utilities.scss
@@ -1,5 +1,3 @@
-@import "colors";
-
-.text-decoration-blue-300 {
-  text-decoration-color: $blue-300;
+.font-feature-normal {
+  font-feature-settings: normal;
 }
