--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,17 +1,17 @@
 {{ define "main" }}
   <div class="flex flex-col my-4 text-white text-5xl font-black">
-    <div class="text-center">Another <span class="underline text-decoration-blue-300">dark</span> corner<br>of the internet</div>
-    <div class="flex justify-center overflow-hidden">
-      <div class="glitch-3" data-text="°">°</div>
+    <div class="text-center">Another <span class="accented accent">dark</span> corner<br>of the internet</div>
+    <div class="flex justify-center">
+      <div class="glitch overflow-hidden" data-text="°">°</div>
     </div>
-    <div class="flex justify-center overflow-hidden">
-      <div class="glitch-3" data-text="&ensp;&ensp;°">&ensp;&ensp;°</div>
+    <div class="flex justify-center">
+      <div class="glitch overflow-hidden" data-text="&ensp;&ensp;°">&ensp;&ensp;°</div>
     </div>
-    <div class="flex justify-center overflow-hidden">
-      <div class="glitch-3" data-text="°">°</div>
+    <div class="flex justify-center">
+      <div class="glitch overflow-hidden" data-text="°">°</div>
     </div>
-    <div class="flex justify-center overflow-hidden">
-      <div class="glitch-3" data-text="<ₒ))><"><ₒ))><</div>
+    <div class="flex justify-center">
+      <div class="glitch overflow-hidden font-feature-normal" data-text="<ₒ))><"><ₒ))><</div>
     </div>
   </div>
 {{ end }}
