--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -18,12 +18,12 @@ $blue-700: #009B95;
 $blue-800: #008C86;
 $blue-900: #007C77;
 
-$dark-100: #414768;
-$dark-200: #3C415F;
-$dark-300: #363B57;
-$dark-400: #31354E;
-$dark-500: #2C3046;
-$dark-600: #262A3D;
-$dark-700: #212434;
-$dark-800: #1B1E2C;
+$dark-100: #A5A8BD;
+$dark-200: #9094A7;
+$dark-300: #7C7F91;
+$dark-400: #686B7B;
+$dark-500: #535665;
+$dark-600: #3F414F;
+$dark-700: #2A2D39;
+$dark-800: #20232E;
 $dark-900: #161823;
