--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -1,11 +1,3 @@
-.text-normal {
-  // Todo: search and delete
-}
-
-.text-important {
-  // Todo: search and delete
-}
-
 .base {
   @apply text-white;
 
@@ -21,7 +13,7 @@
   h6 { @apply text-base; }
 
   a {
-    @apply text-blue-300;
+    @apply text-blue-200;
   }
 
   figcaption {
@@ -40,11 +32,11 @@
   table, th, td {
     @apply p-2;
     @apply border;
-    @apply border-grey-dark;
+    @apply border-dark-300;
   }
 
   th {
-    @extend .text-important;
+    @apply font-bold;
   }
 
   blockquote {
@@ -56,24 +48,20 @@
   }
 
   button {
-    @extend .text-normal;
     @apply px-2;
     @apply py-1;
+    @apply text-white;
     @apply border;
-    @apply border-polar-night-3;
+    @apply border-white;
     @apply rounded-md;
     @apply select-none;
 
     &:hover {
-      @apply text-frost-2;
-      @apply border-frost-2;
+      @apply text-white;
+      @apply border-white;
       @apply transition-colors;
       @apply duration-200;
       @apply ease-in-out;
-
-      .dark-mode & {
-        @apply border-frost-3;
-      }
     }
 
     &:focus {
