--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,14 +1,16 @@
 {{ define "main" }}
-  <div class="text-normal w-full max-w-screen-md mx-auto my-4 px-4">
-    <h1 class="text-important mb-4 font-bold text-4xl">{{ .Title }}</h1>
+  <div class="w-full max-w-screen-md mx-auto my-4 px-4 text-white">
+    <h1 class="glitch mb-4 text-4xl font-bold" data-text="{{ .Title }}">{{ .Title }}</h1>
     <div class="mt-4">
       {{ range .Data.Pages.GroupByDate "2006" }}
-        <div class="block sm:flex mb-6">
-          <div class="mr-10 text-3xl">{{ .Key }}</div>
+        <div class="block sm:flex mb-6" style="align-items: flex-start;">
+          <div class="flex mr-0 sm:mr-10 text-3xl font-bold">
+            <div class="accented accent">{{ .Key }}</div>
+          </div>
 
           <ul class="w-full">
             {{ range .Pages }}
-              <li class="py-3 border-b border-dashed border-grey-light dark:border-grey-dark">
+              <li class="py-3 border-b border-dashed border-dark-100">
                 <a class="flex justify-between" href="{{ .Permalink }}">
                   <span>{{ .Title }}</span>
                   <span>
