--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,39 +1,34 @@
 {{ define "main" }}
-  {{ partial "javascript" (dict "context" . "paths" (slice "js/vendor/prism.js" "js/prism.js") "name" "js/prism.js") }}
-  <div class="flex flex-col max-w-screen-lg mx-auto my-4">
-    <div class="px-4 text-center text-polar-night-2 dark:text-snow-storm-2">
-      <h1 class="pt-6 text-4xl font-bold">{{ .Title }}</h1>
-      <h2 class="pt-3 pb-12 text-xl">{{ .Summary }}</h2>
+  <div class="w-full max-w-screen-md mx-auto my-4 px-4">
+    <div class="single">
+      <h1 class="glitch" data-text="{{ .Title }}">{{ .Title }}</h1>
+      {{ .Content }}
     </div>
-    <div class="w-full mx-auto sm:px-4">
-      <div class="single px-8 pt-8 max-w-screen-md mx-auto">
-        {{ .Content }}
+    <hr class="my-8 border-dark-100">
+    <div class="pb-8 flex justify-between text-sm text-dark-100">
+      <div class="flex align-middle">
+        <svg class="my-auto mr-2 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
+          <line x1="16" y1="2" x2="16" y2="6" />
+          <line x1="8" y1="2" x2="8" y2="6" />
+          <line x1="3" y1="10" x2="21" y2="10" />
+        </svg>
+        <span>
+          {{ if .Site.Params.dateformNum }}
+            {{ dateFormat .Site.Params.dateformNum .Date.Local }}
+          {{ else }}
+            {{ dateFormat "2006-01-02" .Date.Local }}
+          {{ end }}
+        </span>
       </div>
-      <hr class="my-8 border-snow-storm-1 dark:border-polar-night-3">
-      <div class="px-8 pb-8 flex justify-between text-sm text-grey-light dark:text-grey-dark">
-        <div class="flex align-middle">
-          <svg class="my-auto mr-2 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
-            <line x1="16" y1="2" x2="16" y2="6" />
-            <line x1="8" y1="2" x2="8" y2="6" />
-            <line x1="3" y1="10" x2="21" y2="10" />
-          </svg>
-          <span>
-            {{ if .Site.Params.dateformNum }}
-              {{ dateFormat .Site.Params.dateformNum .Date.Local }}
-            {{ else }}
-              {{ dateFormat "2006-01-02" .Date.Local }}
-            {{ end }}
-          </span>
-        </div>
-        <a class="flex align-middle" href="{{ .Site.Params.ContentUrl}}/{{ path.Join "" .File.Path }}" target="_blank">
-          <svg class="my-auto mr-2 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7" />
-            <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z" />
-          </svg>
-          <span>Improve</span>
-        </a>
-      </div>
+      <a class="flex align-middle" href="{{ .Site.Params.ContentUrl}}/{{ path.Join "" .File.Path }}" target="_blank">
+        <svg class="my-auto mr-2 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7" />
+          <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z" />
+        </svg>
+        <span>Improve</span>
+      </a>
     </div>
+    {{ partial "javascript" (dict "context" . "paths" (slice "js/vendor/prism.js" "js/prism.js") "name" "js/prism.js") }}
   </div>
 {{ end }}
